# mask-generation

./: .clang-tidy  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
app/: CMakeLists.txt  main.cpp
cmake/: maskgenConfig.cmake.in
include/maskgen/: camera.h  mask_generator.h  mesh.h
shaders/: mask.vert
src/: CMakeLists.txt  mask_generator.cpp  mesh.cpp  vulkan_context.cpp  vulkan_context.h
